apps/app-proxy/overlays/csdp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: csdp-cap-app-proxy
  namespace: csdp
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: cap-app-proxy
            port:
              number: 3017
        path: /app-proxy
        pathType: ImplementationSpecific
status:
  loadBalancer: {}
